Fixing shell links

--- a/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell-fragment.html
+++ b/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell-fragment.html
@@ -24,7 +24,7 @@
     <section class="docs-Component">
       <p>This is the stand-alone file for testing the 'overview-fragment' published by each component.</p>
           <section class="docs-Example-section docs-Example-simpleExample">
-                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell"><a class="coral-Link" href="Coral.Shell.html">Coral.Shell</a></h2>
+                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell"><a class="coral-Link" href="/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.html">Coral.Shell</a></h2>
             <p>The CoralUI Shell component is a wrapping container for the <code>coralui-shell-*</code> components.</p>
           </section>
     </section>
