--- a/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Workspaces-fragment.html
+++ b/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Workspaces-fragment.html
@@ -24,7 +24,7 @@
     <section class="docs-Component">
       <p>This is the stand-alone file for testing the 'overview-fragment' published by each component.</p>
           <section class="docs-Example-section docs-Example-simpleExample">
-                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.Workspaces"><a class="coral-Link" href="Coral.Shell.Workspaces.html">Coral.Shell.Workspaces</a></h2>
+                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.Workspaces"><a class="coral-Link" href="/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Workspaces.html">Coral.Shell.Workspaces</a></h2>
             <p>
               The Coral.Shell.Workspaces component creates navigation options intended
               for switching what is displayed in the main content zone.
