--- a/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Help-fragment.html
+++ b/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Help-fragment.html
@@ -24,7 +24,7 @@
     <section class="docs-Component">
       <p>This is the stand-alone file for testing the 'overview-fragment' published by each component.</p>
           <section class="docs-Example-section docs-Example-simpleExample">
-                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.Help"><a class="coral-Link" href="Coral.Shell.Help.html">Coral.Shell.Help</a></h2>
+                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.Help"><a class="coral-Link" href="/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Help.html">Coral.Shell.Help</a></h2>
             <p>
               The Coral.Shell.Help component is a standardized help menu designed to fit into the
               Shell 3 pattern.
