--- a/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.SolutionSwitcher-fragment.html
+++ b/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.SolutionSwitcher-fragment.html
@@ -24,9 +24,9 @@
     <section class="docs-Component">
       <p>This is the stand-alone file for testing the 'overview-fragment' published by each component.</p>
           <section class="docs-Example-section docs-Example-simpleExample">
-                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.SolutionSwitcher"><a class="coral-Link" href="Coral.Shell.SolutionSwitcher.html">Coral.Shell.SolutionSwitcher</a></h2>
+                <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.SolutionSwitcher"><a class="coral-Link" href="/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.SolutionSwitcher.html">Coral.Shell.SolutionSwitcher</a></h2>
             <p>
-              The <a href='./Coral.Shell.SolutionSwitcher.html' class='coral-Link'>Shell.SolutionSwitcher</a> component provides an easy way to quickly switch between solutions and core services.
+              The <a href='/static/6-5/coral-ui/coralui3/shell/documentation//Coral.Shell.SolutionSwitcher.html' class='coral-Link'>Shell.SolutionSwitcher</a> component provides an easy way to quickly switch between solutions and core services.
               
             </p>
             <div class="docs-Example-simpleExampleMarkup u-columnLarge">
