--- a/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.MenuBar-fragment.html
+++ b/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.MenuBar-fragment.html
@@ -26,7 +26,7 @@
           <section class="docs-Example-section docs-Example-simpleExample">
                 <h2 class="coral-Heading coral-Heading--2 js-guide-heading-toc js-guide-heading-toc--section" id="coral.Shell.MenuBar"><a class="coral-Link" href="/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.MenuBar.html">Coral.Shell.MenuBar</a></h2>
             <p>
-              The <a href='/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.Menubar.html' class='coral-Link'>Shell.Menubar</a> and
+              The <a href='/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.MenuBar.html' class='coral-Link'>Shell.Menubar</a> and
               <a href='/static/6-5/coral-ui/coralui3/shell/documentation/Coral.Shell.MenuBar.html#Coral.Shell.MenuBar.Item:api' class='coral-Link'>Shell.Menubar.Item</a>
               components provide container elements for the menu area of the Shell3 pattern.
             </p>
